# dancers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_web.sh  install.sh
assets/models/: bus.glb  robot.mtl
assets/web/: demos.html  embed_shell.html  gbp_demo_shell.html  index.html  shell.html
config/: joint_consensus_shape_formation.yaml  shape_formation.yaml
config/consensus/: bestOfN.yaml  bestOfN_seedrobots.yaml  continuous_SE2.yaml  continuous_SO2.yaml
config/pathplanning/: circle.yaml  circle_cluttered.yaml  example_waypoints.json  junction.yaml  junction_twoway.yaml
docs/: how_it_works.md  modifying_dancers.md
inc/: Globals.h  Graphics.h  PathPlanningScenarios.h  Robot.h  ShapeFormation.h  Simulator.h  Utils.h
inc/CustomFactorGraphLayers/: Consensus.h  DrawableLayer.h  ExampleLayer.h  Pathplanning.h
inc/gbp/: Factor.h  FactorGraph.h  FactorGraphLayer.h  GBPCore.h  LieGroups.h  Variable.h
src/: Globals.cpp  Graphics.cpp  PathPlanningScenarios.cpp  Robot.cpp  ShapeFormation.cpp  Simulator.cpp  Utils.cpp  main.cpp
src/CustomFactorGraphLayers/: Consensus.cpp  ExampleLayer.cpp  Pathplanning.cpp
src/examples/: gbp-1d-line-fitting.cpp  gbp-se2-localisation.cpp  gbp-three-variable-factorgraph.cpp  gbp-two-layer-factorgraph.cpp
src/gbp/: Factor.cpp  Variable.cpp
src/helpers/: shape_editor.cpp
